--- a/css/style.css
+++ b/css/style.css
@@ -2371,3 +2371,15 @@ ul.bottom_menu li {
 .menu-abajo i{
 	font-size: 25px;
 }
+.for_slick_slider{
+	display: flex;
+}
+.for_slick_sldier .items{
+	widows: 350px;
+	height: 250px;
+	margin: 350px;
+}
+.for_slick_slider .items img{
+	widows: 350px;
+	height: 250px;
+}
